--- a/packages/app-b/package.json
+++ b/packages/app-b/package.json
@@ -4,16 +4,19 @@
   "main": "dist/index.js",
   "types": "dist/@types",
   "scripts": {
-    "build:prod": "webpack --config webpack.prod.js",
-    "build:dev": "webpack --config webpack.dev.js"
+    "build": "webpack --config webpack.dev.js",
+    "start": "webpack-dev-server --config webpack.start.js"
   },
   "license": "MIT",
   "devDependencies": {
     "@types/react": "^16.8.13",
-    "@we/dev-tools": "1.0.0"
+    "@types/react-dom": "^16.8.4",
+    "@we/dev-tools": "1.0.0",
+    "react-dom": "^16.8.6"
   },
   "dependencies": {
     "@we/box": "^1.0.0",
+    "@we/theme": "^1.0.0",
     "@we/ui-component-a": "^1.0.0",
     "@we/ui-component-b": "^1.0.0",
     "react": "^16.8.6"
