--- a/packages/root-app/package.json
+++ b/packages/root-app/package.json
@@ -4,6 +4,7 @@
   "main": "dist/index.js",
   "types": "dist/@types",
   "scripts": {
+    "build": "./build.sh",
     "build:prod": "webpack --config webpack.prod.js",
     "build:dev": "webpack --config webpack.dev.js"
   },
