--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -29,6 +29,7 @@
     "suppressImplicitAnyIndexErrors": true,
     "declaration": true,
     "esModuleInterop": true,
+    "ignoreDeprecations": "5.0",
   },
   "exclude": [
     "*/node_modules/*"
