--- a/packages/root-app/package.json
+++ b/packages/root-app/package.json
@@ -12,12 +12,12 @@
   "dependencies": {
     "@we/app-a": "^1.0.0",
     "@we/app-b": "^1.0.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@we/dev-tools": "1.0.0",
-    "@types/react": "^16.8.13",
-    "@types/react-dom": "^16.8.4"
+    "@types/react": "18.2.0",
+    "@types/react-dom": "18.2.0",
+    "@we/dev-tools": "1.0.0"
   }
 }
